# ticktick-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_api.py  pyproject.toml  special_projects_discovery.json  test_server.py  test_server_oop.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_config.py  mock_data.py
tests/integration/: __init__.py  test_api_basic.py  test_e2e_basic.py  test_server_basic.py
tests/unit/: __init__.py  test_client_basic.py  test_config_basic.py  test_models.py
ticktick_mcp/: __init__.py  authenticate.py  cli.py  client.py  config.py  exceptions.py  logging_config.py  models.py  server_oop.py  tools.py
ticktick_mcp/src/: __init__.py  auth.py  server.py  server_legacy.py  ticktick_client.py
